k8s/apps/monitoring/base/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 80
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: grafana
